# binary_state_solver

./: CMakeLists.txt  INSTALL  README.md
conf/: CMakeLists.txt  binary_types.conf
src/: CMakeLists.txt  binary_state_solver.cpp
